maven.compiler.source > 1.8 maven.compiler.target > 1.8

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
     <groupId>study.techno</groupId>
     <artifactId>TestingSoftwareProject2</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
