--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>study.techno</groupId>
     <artifactId>TestingSoftwareProject2</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <properties>
+    <properties> <!-- Error:java: error: release version 5 not supported -->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,6 +17,12 @@
             <artifactId>testng</artifactId>
             <version>6.8</version>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
         </dependency>
     </dependencies>
 </project>
