scope of dependency should be test

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>3.141.59</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
